--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,3 +1,4 @@
+<!-- import bootstrap in your original ejs file, instructions: https://getbootstrap.com/docs/5.0/getting-started/introduction/-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
 
