--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -1,12 +1,180 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MY PAGE</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <title>Noodles Express</title>
 </head>
+
 <body>
-<h3>MY PAGE</h3>
+  <%- include('partials/_header') %>
+    <div class="mainContainer m-5">
+      <!-- Current Orders card -->
+      <div class="currentOrderContainer d-flex flex-row m-5">
+        <h2 class="currentOrderTitle w-25">Current Orders</h2>
+        <div class="currentOrderCardContainer flex-column w-75">
+          <div class="currentOrder card mb-5">
+            <h5 class="card-header">Order: #23456</h5>
+            <div class="card-body d-flex">
+              <div class="cardLeft w-50">
+                <table class="table table-borderless">
+                  <h5>Details</h5>
+                  <tbody>
+                    <tr>
+                      <th scope="col">Date</th>
+                      <td>09 Jan 2021</td>
+                    </tr>
+                    <tr>
+                      <th scope="col">Order Time</th>
+                      <td>13:15PM</td>
+                    </tr>
+                    <tr>
+                      <th scope="col">Pick Up Time</th>
+                      <td>13:35PM</td>
+                    </tr>
+                    <tr>
+                      <th scope="col">Location</th>
+                      <td>1234 King Street, Vancouver, BC V1K 6S7</td>
+                    </tr>
+                    <tr>
+                      <th scope="col">Status</th>
+                      <td>Preparing your meal</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <div class="cardRighttable-responsive w-50">
+                <table class="table">
+                  <h5>Ordered Items</h5>
+                  <thead>
+                    <tr>
+                      <th scope="col">Item</th>
+                      <th scope="col">Price</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>Pork Ramen</td>
+                      <td>$12.00</td>
+                    </tr>
+                    <tr>
+                      <td>Mushroom Fried Noodle</td>
+                      <td>$12.00</td>
+                    </tr>
+                  </tbody>
+                  <tfoot>
+                    <tr>
+                      <td class="text-end">Sub-Total</td>
+                      <td>$26.00</td>
+                    </tr>
+                    <tr>
+                      <td class="text-end">Tax@5%</td>
+                      <td>$1.30</td>
+                    </tr>
+                    <tr>
+                      <td class="text-end">Total</td>
+                      <td>$27.30</td>
+                    </tr>
+                  </tfoot>
+                </table>
+
+              </div>
+            </div>
+          </div>
+          <!-- Only show this meesage when user have no current orders -->
+          <div class="noCurrentOrdersCard card">
+            <div class="card-body">
+              You have no current orders.
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--  -->
+      <hr>
+      <!-- Past Orders card -->
+      <div class="currentOrderContainer d-flex flex-row m-5">
+        <h2 class="currentOrderTitle w-25">Past Orders</h2>
+        <div class="currentOrderCardContainer flex-column w-75">
+          <div class="currentOrder card mb-5">
+            <h5 class="card-header">Order: #19008</h5>
+            <div class="card-body d-flex">
+              <div class="cardLeft w-50">
+                <table class="table table-borderless">
+                  <h5>Details</h5>
+                  <tbody>
+                    <tr>
+                      <th scope="col">Date</th>
+                      <td>01 Jan 2021</td>
+                    </tr>
+                    <tr>
+                      <th scope="col">Order Time</th>
+                      <td>17:15PM</td>
+                    </tr>
+                    <tr>
+                      <th scope="col">Pick Up Time</th>
+                      <td>18:35PM</td>
+                    </tr>
+                    <tr>
+                      <th scope="col">Location</th>
+                      <td>1234 King Street, Vancouver, BC V1K 6S7</td>
+                    </tr>
+                    <tr>
+                      <th scope="col">Status</th>
+                      <td>Completed</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <div class="cardRighttable-responsive w-50">
+                <table class="table">
+                  <h5>Ordered Items</h5>
+                  <thead>
+                    <tr>
+                      <th scope="col">Item</th>
+                      <th scope="col">Price</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>Pork Ramen</td>
+                      <td>$12.00</td>
+                    </tr>
+                    <tr>
+                      <td>Mushroom Fried Noodle</td>
+                      <td>$12.00</td>
+                    </tr>
+                  </tbody>
+                  <tfoot>
+                    <tr>
+                      <td class="text-end">Sub-Total</td>
+                      <td>$26.00</td>
+                    </tr>
+                    <tr>
+                      <td class="text-end">Tax@5%</td>
+                      <td>$1.30</td>
+                    </tr>
+                    <tr>
+                      <td class="text-end">Total</td>
+                      <td>$27.30</td>
+                    </tr>
+                  </tfoot>
+                </table>
+
+              </div>
+            </div>
+          </div>
+          <!-- Insert more cards here -->
+        </div>
+      </div>
+    </div>
+
 </body>
+
 </html>
