--- a/views/order.ejs
+++ b/views/order.ejs
@@ -16,6 +16,9 @@
   <!-- Bootstrap Icon CDN -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 
+  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+  <script type="text/javascript" src="/scripts/app.js"></script>
+
 
   <title>Noodles Express</title>
 </head>
@@ -156,6 +159,7 @@
         </div>
       </div>
     </div>
+    <div id='test'></div>
 
 </body>
 
