--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,17 +1,37 @@
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+// body {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   min-height: 100vh;
 
-  background: rgb(163, 208, 219);
-  background: linear-gradient(
-    227deg,
-    rgba(163, 208, 219, 1) 0%,
-    rgba(163, 176, 219, 1) 20%,
-    rgba(163, 173, 219, 1) 34%,
-    rgba(163, 219, 208, 1) 59%,
-    rgba(163, 208, 219, 1) 74%,
-    rgba(163, 208, 219, 1) 100%
-  );
+//   background: rgba(254, 228, 152, 0.695);
+
+// }
+
+body {
+  color: #545149;
+  background-color: #f4f1ec;
+  font-family:'Source Sans Pro', sans-serif;
+  font-size: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.container {
+  background-color: #f4f1ec;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
+
+}
+
+.main {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  margin-top: 60px;
 }
