add category section

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,39 +52,51 @@
     <section class="menu">
      <div class="items">
        <img id="dish_pic" src="<%= menu1.thumbnail_url %>">
-       <text id="dish_name">Pork Ramen</text>
-       <text id="dish_description">Chashu, Black Fungus, Egg, Green Onion</text>
-       <text id="dish_price">$12</text>
+       <div class="info">
+        <text id="dish_name">Pork Ramen</text>
+        <text id="dish_description">Chashu, Black Fungus, Egg, Green Onion</text>
+        <text id="dish_price">$12</text>
+      </div>
       </div>
      <div class="items">
        <img id="dish_pic" src="<%= menu1.thumbnail_url %>">
-       <text id="dish_name">Pork Ramen</text>
-       <text id="dish_description">Chashu, Black Fungus, Egg, Green Onion</text>
-       <text id="dish_price">$12</text>
+       <div class="info">
+        <text id="dish_name">Pork Ramen</text>
+        <text id="dish_description">Chashu, Black Fungus, Egg, Green Onion</text>
+        <text id="dish_price">$12</text>
+      </div>
       </div>
      <div class="items">
        <img id="dish_pic" src="<%= menu1.thumbnail_url %>">
-       <text id="dish_name">Pork Ramen</text>
-       <text id="dish_description">Chashu, Black Fungus, Egg, Green Onion</text>
-       <text id="dish_price">$12</text>
+       <div class="info">
+        <text id="dish_name">Pork Ramen</text>
+        <text id="dish_description">Chashu, Black Fungus, Egg, Green Onion</text>
+        <text id="dish_price">$12</text>
+      </div>
       </div>
      <div class="items">
        <img id="dish_pic" src="<%= menu1.thumbnail_url %>">
-       <text id="dish_name">Pork Ramen</text>
-       <text id="dish_description">Chashu, Black Fungus, Egg, Green Onion</text>
-       <text id="dish_price">$12</text>
+       <div class="info">
+        <text id="dish_name">Pork Ramen</text>
+        <text id="dish_description">Chashu, Black Fungus, Egg, Green Onion</text>
+        <text id="dish_price">$12</text>
+      </div>
       </div>
      <div class="items">
        <img id="dish_pic" src="<%= menu1.thumbnail_url %>">
-       <text id="dish_name">Pork Ramen</text>
-       <text id="dish_description">Chashu, Black Fungus, Egg, Green Onion</text>
-       <text id="dish_price">$12</text>
+       <div class="info">
+        <text id="dish_name">Pork Ramen</text>
+        <text id="dish_description">Chashu, Black Fungus, Egg, Green Onion</text>
+        <text id="dish_price">$12</text>
+      </div>
       </div>
      <div class="items">
        <img id="dish_pic" src="<%= menu1.thumbnail_url %>">
-       <text id="dish_name">Pork Ramen</text>
-       <text id="dish_description">Chashu, Black Fungus, Egg, Green Onion</text>
-       <text id="dish_price">$12</text>
+       <div class="info">
+        <text id="dish_name">Pork Ramen</text>
+        <text id="dish_description">Chashu, Black Fungus, Egg, Green Onion</text>
+        <text id="dish_price">$12</text>
+      </div>
       </div>
     </section>
   </main>
