--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
 
-    <a class="navbar-brand w-25" href="#">
+    <a class="navbar-brand w-25" href="/">
       <img src="/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24"
         class="d-inline-block align-text-top">
       Noodles Express
@@ -10,16 +10,16 @@
 
       <ul class="navbar-nav ms-auto me-auto mb-2 mb-lg-0 w-50 d-flex justify-content-center">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="/" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Menu</a>
+          <a class="nav-link" href="/order">Menu</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact us</a>
+          <a class="nav-link" href="/contactus">Contact us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">My orders</a>
+          <a class="nav-link" href="/mypage">My orders</a>
         </li>
       </ul>
 
