--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,30 +1,7 @@
 <!-- import bootstrap in your original ejs file, instructions: https://getbootstrap.com/docs/5.0/getting-started/introduction/-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-
-    <a class="navbar-brand w-25" href="#">
-      <img src="/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24"
-        class="d-inline-block align-text-top">
-      Noodles Express
-    </a>
-
-      <ul class="navbar-nav ms-auto me-auto mb-2 mb-lg-0 w-50 d-flex justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Menu</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact us</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">My orders</a>
-        </li>
-      </ul>
-
-    <div class="w-25 d-flex justify-content-end">
-      Hello, user!
-    </div>
-
+<nav class="top_nav">
+  <span class="title">
+    <img src="/images/NoodleExpressLogoText.png">
+  </span>
+  <span class="contact">Hello, *user*!</span>
 </nav>
