--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
 
 <body>
   <!-- Top Nav Bar (fixed) -->
-  <nav>
+  <nav class="top_nav">
     <span class="title">
       <img src="/images/NoodleExpressLogoText.png">
     </span>
