--- a/styles/order.scss
+++ b/styles/order.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  padding-left: 0;
+  padding-top: 40px;
   margin-bottom: 0;
   list-style: none;
 }
