Create order button for home page, and make logo clickable link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,13 +21,14 @@
 
   <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
   <script type="text/javascript" src="/scripts/app.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 </head>
 
 <body>
   <!-- Top Nav Bar (fixed) -->
   <nav class="top_nav">
-    <span class="title">
-      <img src="/images/NoodleExpressLogoText.png">
+    <span>
+      <a class="title" href="/"><img src="/images/NoodleExpressLogoText.png"></a>
     </span>
     <span class="contact">Hello, *user*!</span>
   </nav>
@@ -36,6 +37,7 @@
   <header class="main">
     <div class="welcome">
       <h2 class="statement">Real Food, Made Fresh!</h2>
+      <a href="/order"><button type="button" class="btn btn-primary w-100">Order Now</button></a>
     </div>
     <div class="logo">
       <img class="photo" src="/images/Noodles_Express_Logo.png">
