--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,7 +1,8 @@
 <!-- import bootstrap in your original ejs file, instructions: https://getbootstrap.com/docs/5.0/getting-started/introduction/-->
+
 <nav class="top_nav">
-  <span class="title">
-    <img src="/images/NoodleExpressLogoText.png">
+  <span>
+    <a href="/"><img class="title" src="/images/NoodleExpressLogoText.png"></a>
   </span>
   <span class="contact">Hello, *user*!</span>
 </nav>
