add 'my order' button to top left corner

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
     <span>
       <a class="title" href="/"><img src="/images/NoodleExpressLogoText.png"></a>
     </span>
-    <span class="contact">Hello, *user*!</span>
+    <a href="/mypage"><span class="contact">My Order</span></a>
   </nav>
 
   <!-- HEADER -->
@@ -61,43 +61,43 @@
       </div>
       </div>
      <div class="items">
-       <img id="dish_pic" src="<%= menu1.thumbnail_url %>">
+       <img id="dish_pic" src="<%= menu2.thumbnail_url %>">
        <div class="info">
-        <text id="dish_name">Pork Ramen</text>
-        <text id="dish_description">Chashu, Black Fungus, Egg, Green Onion</text>
+        <text id="dish_name">Veggie Ramen</text>
+        <text id="dish_description">Eggplant peperoncini, croquette, bamboo shoot and green onion</text>
         <text id="dish_price">$12</text>
       </div>
       </div>
      <div class="items">
-       <img id="dish_pic" src="<%= menu1.thumbnail_url %>">
+       <img id="dish_pic" src="<%= menu3.thumbnail_url %>">
        <div class="info">
-        <text id="dish_name">Pork Ramen</text>
-        <text id="dish_description">Chashu, Black Fungus, Egg, Green Onion</text>
+        <text id="dish_name">Mushroom Noodles</text>
+        <text id="dish_description">Hand pulled noodles, mushrooms, onion and carrots</text>
         <text id="dish_price">$12</text>
       </div>
       </div>
      <div class="items">
-       <img id="dish_pic" src="<%= menu1.thumbnail_url %>">
+       <img id="dish_pic" src="<%= menu6.thumbnail_url %>">
        <div class="info">
-        <text id="dish_name">Pork Ramen</text>
-        <text id="dish_description">Chashu, Black Fungus, Egg, Green Onion</text>
-        <text id="dish_price">$12</text>
+        <text id="dish_name">Fried Rolls</text>
+        <text id="dish_description">Fresh fried rolls, cheese and onions</text>
+        <text id="dish_price">$8</text>
       </div>
       </div>
      <div class="items">
-       <img id="dish_pic" src="<%= menu1.thumbnail_url %>">
+       <img id="dish_pic" src="<%= menu4.thumbnail_url %>">
        <div class="info">
-        <text id="dish_name">Pork Ramen</text>
-        <text id="dish_description">Chashu, Black Fungus, Egg, Green Onion</text>
-        <text id="dish_price">$12</text>
+        <text id="dish_name">Coke</text>
+        <text id="dish_description">You know what it is</text>
+        <text id="dish_price">$3</text>
       </div>
       </div>
      <div class="items">
-       <img id="dish_pic" src="<%= menu1.thumbnail_url %>">
+       <img id="dish_pic" src="<%= menu5.thumbnail_url %>">
        <div class="info">
-        <text id="dish_name">Pork Ramen</text>
-        <text id="dish_description">Chashu, Black Fungus, Egg, Green Onion</text>
-        <text id="dish_price">$12</text>
+        <text id="dish_name">Strawberry Crepes</text>
+        <text id="dish_description">Fresh Strawberries and whipping cream</text>
+        <text id="dish_price">$5</text>
       </div>
       </div>
     </section>
