--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -4,5 +4,5 @@
   <span>
     <a href="/"><img class="title" src="/images/NoodleExpressLogoText.png"></a>
   </span>
-  <span class="contact">Hello, *user*!</span>
+  <a href="/mypage"><span class="contact">My Order!</span></a>
 </nav>
