make delete button to work

--- a/views/order.ejs
+++ b/views/order.ejs
@@ -60,34 +60,10 @@
                 <th scope="col">Price</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>X</td>
-                <td>Pork Ramen</td>
-                <td>$12.00</td>
-              </tr>
-              <tr>
-                <td>X</td>
-                <td>Mushroom Fried Noodle</td>
-                <td>$12.00</td>
-              </tr>
+            <div></div>
+            <tbody id="cartRows">
             </tbody>
-            <tfoot>
-              <tr>
-                <td></td>
-                <td class="text-end">Sub-Total</td>
-                <td>$26.00</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td class="text-end">Tax@5%</td>
-                <td>$1.30</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td class="text-end">Total</td>
-                <td>$27.30</td>
-              </tr>
+            <tfoot id="cartRowsSum">
             </tfoot>
           </table>
           <button type="button" class="btn btn-primary w-100">Order Now</button>
