--- a/views/order.ejs
+++ b/views/order.ejs
@@ -66,7 +66,7 @@
             <tfoot id="cartRowsSum">
             </tfoot>
           </table>
-          <button type="button" class="btn btn-primary w-100">Order Now</button>
+          <button type="button" class="btn btn-primary w-100 order_now_button">Order Now</button>
         </div>
       </div>
     </section>
