--- a/styles/order.scss
+++ b/styles/order.scss
@@ -40,8 +40,13 @@
   box-shadow: 5px 5px 5px rgba(187, 175, 89, 0.5);
   border-radius: 15px;
   padding: 1em;
-  height: 40vh;
+  height: fit-content;
   font-size: small;
+
+  display: flex !important;
+  align-content: flex-start;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 #dish_pic {
