add drop down style to customizations

--- a/styles/order.scss
+++ b/styles/order.scss
@@ -31,8 +31,6 @@
 
 
 // MENU items after orginal visit
-// .menu_category_container {
-// }
 
 .photoAndTitle {
   background-color: yellow;
@@ -60,17 +58,11 @@
 .itemTitle {
   font-size: x-large;
   margin-bottom: 0 !important;
-
 }
 
 .itemPrice {
   font-style: italic;
 }
-
-.itemDescr {
-
-}
-
 // CART
 
 .cartCard {
@@ -78,8 +70,6 @@
   box-shadow: 5px 5px 5px rgba(187, 175, 89, 0.5);
   font-size: x-small;
   width: 40vw!important;
-
-
 }
 
 .w-50 {
@@ -96,10 +86,6 @@ margin-right: 3rem!important;
 .menu_and_cart_container {
   display: flex;
   padding-top: 120px;
-  // position: fixed;
-
-  // box-shadow: 5px 5px 5px rgba(187, 175, 89, 0.5);
-
 }
 
 // Customizations
@@ -119,6 +105,12 @@ margin-right: 3rem!important;
   // visibility: collapse;
 }
 
+.btn-group-a {
+  display: flex;
+  flex-direction: column;
+
+}
+
 .category_nav {
   position: fixed;
   z-index: 99;
@@ -129,4 +121,8 @@ margin-right: 3rem!important;
 .page_body_container {
   display: flex;
   justify-content: flex-start;
+}
+
+.confirm_button {
+  height: fit-content;
 }
