--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -18,7 +18,7 @@
     <div class="mainContainer m-5">
       <!-- Current Orders card -->
       <div class="currentOrderContainer d-flex flex-column m-5">
-        <h2 class="currentOrderTitle w-100">Pending Orders</h2>
+        <h2 class="currentOrderTitle w-100">All Orders</h2>
         <table class="table">
           <thead>
             <tr>
@@ -33,80 +33,56 @@
             </tr>
           </thead>
           <tbody>
-            <% for(let ctOrder in currentOrder) { %>
+            <% for(let order in data) { %>
               <tr>
-                <th>
-                  <%= currentOrder[ctOrder]['order_id'] %>
-                </th>
                 <td>
-                  <%= ('0'+currentOrder[ctOrder]['date'].getDate()).slice(-2) %>
-                  <% switch (currentOrder[ctOrder]['date'].getMonth()) { case 0 : %>
-                    Jan
-                    <% break; case 1 : %>
-                      Feb
-                      <% break; case 2 : %>
-                        Mar
-                        <% break; case 3 : %>
-                          Apr
-                          <% break; case 4 : %>
-                            May
-                            <% break; case 5 : %>
-                              Jun
-                              <% break; case 6 : %>
-                                Jul
-                                <% break; case 7 : %>
-                                  Aug
-                                  <% break; case 8 : %>
-                                    Sep
-                                    <% break; case 9 : %>
-                                      Oct
-                                      <% break; case 10 : %>
-                                        Nov
-                                        <% break; case 11 : %>
-                                          Dec
-                                          <% break; } %>
-                                            <%= currentOrder[ctOrder]['date'].getFullYear() %><br>
-                  <%= ('0'+currentOrder[ctOrder]['date'].getHours()).slice(-2); %>:<%=
-                      ('0'+currentOrder[ctOrder]['date'].getMinutes()).slice(-2); %>
+                  <%= data[order][0]['order_id'];%>
+                </td>
+                <td class="col-2">
+                  <%= data[order][0]['order_time'];%>
+                </td>
+                <td class="col-2">
+                  <%= data[order][0]['pick_up_time'];%>
                 </td>
                 <td>
-                  <%= currentOrder[ctOrder]['pick_up_time']?
-                    ('0'+currentOrder[ctOrder]['pick_up_time'].getHours()).slice(-2)+':'+('0'+currentOrder[ctOrder]['pick_up_time'].getMinutes()).slice(-2)
-                    :'TBD';%>
+                  <%= data[order][0]['order_status'] %>
                 </td>
                 <td>
-                  <%= currentOrder[ctOrder]['order_status'] %>
+                  <% for(let item of data[order]) { %>
+                    <%= item['item_name'] %>
+                    <br>
+                    <div class="ps-2">
+                    + (<%= item['hot'] ? 'Hot' : 'Cold' %>
+                    / <%=item['item_size'] %>
+                    / Spicyness:<%= item['spiciness'] %>)
+                  </div>
+                    <% } %>
                 </td>
                 <td>
-                  <% for(let currentOrderBasket of currentOrderTotal[currentOrder[ctOrder]['order_id']]) { %>
-                    <%= currentOrderBasket['item'] %>(<%= currentOrderBasket['hot'] ? 'Hot' : 'Cold' %>/<%=
-                          currentOrderBasket['item_size'] %>/Spicyness:<%= currentOrderBasket['spiciness'] %>) $<%=
-                              Number(currentOrderBasket['price']).toFixed(2) %><br>
-                              <% } %>
+                  <%= data[order][0]['first_name'] %> <%= data[order][0]['last_name'] %><br>
+                    <%= data[order][0]['phone'] %>
                 </td>
                 <td>
-                  <%= currentOrder[ctOrder]['name'] %><br>
-                    <%= currentOrder[ctOrder]['phone'] %>
-                </td>
-                <td>
-                  Sub Total: $<%= Number(currentOrder[ctOrder]['sum']).toFixed(2) %><br>
-                    Tax@5: %$<%= (currentOrder[ctOrder]['sum'] * 0.05).toFixed(2) %><br>
-                      Total: $<%= (Number(currentOrder[ctOrder]['sum'] * 0.05) +
-                        Number(currentOrder[ctOrder]['sum'])).toFixed(2) %>
+                  Sub Total: $<%= Number(data[order][0]['total']).toFixed(2) %><br>
+                    Tax@5: %$<%= (data[order][0]['total'] * 0.05).toFixed(2) %><br>
+                      Total: $<%= (Number(data[order][0]['total'] * 0.05) +
+                        Number(data[order][0]['total'])).toFixed(2) %>
                 </td>
                 <td class="col-1">
-                  <form class="row g-3">
-                    <% if(currentOrder[ctOrder]['pick_up_time']){ %>
-                      <button type="button" class="btn btn-primary">Ready for Pick Up</button>
-                      <% } else{ %>
-                  <div class="col-auto">
-                    <label for="inputPassword2" class="visually-hidden">Minutes</label>
-                    <input type="minutes" class="form-control" id="inputPassword2" placeholder="Minutes">
-                  </div>
-                  <div class="col-auto">
-                    <button type="submit" class="btn btn-primary mb-3">Submit</button>
-                  </div>
-                </form>
+                    <% if(data[order][0]['order_status'] === null){ %>
+                      <form class="row-auto">
+                        <div class="col-auto">
+                          <label for="inputPassword2" class="visually-hidden">Minutes</label>
+                          <input type="minutes" class="form-control" id="inputPassword2" placeholder="Minutes">
+                        </div>
+                        <div class="col-auto">
+                          <button type="submit" class="btn btn-primary mb-3">Submit</button>
+                        </div>
+                      </form>
+                      <% } else if(data[order][0]['order_status'] === 'Preparing your meal'){ %>
+                        <button type="readyBtn" class="btn btn-primary">Ready</button>
+                        <% } else if(data[order][0]['order_status'] === 'Ready for pick up'){ %>
+                          <button type="readyBtn" class="btn btn-primary">Complete</button>
                 <% } %>
               </td>
               </tr>
@@ -114,89 +90,7 @@
           </tbody>
         </table>
       </div>
-      <!--  -->
-      <hr>
-      <!-- Past Orders card -->
-      <div class="pastOrderContainer d-flex flex-column m-5">
-        <h2 class="pastOrderTitle w-100">Completed Orders</h2>
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Order #</th>
-              <th scope="col">Order Time</th>
-              <th scope="col">P/U Time</th>
-              <th scope="col">Status</th>
-              <th scope="col">Ordered Items</th>
-              <th scope="col">Customer</th>
-              <th scope="col">Total $</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% for(let prevOrder in prevOrders) { %>
-              <tr>
-                <th>
-                  <%= prevOrders[prevOrder]['order_id'] %>
-                </th>
-                <td>
-                  <%= ('0'+prevOrders[prevOrder]['date'].getDate()).slice(-2) %>
-                  <% switch (prevOrders[prevOrder]['date'].getMonth()) { case 0 : %>
-                    Jan
-                    <% break; case 1 : %>
-                      Feb
-                      <% break; case 2 : %>
-                        Mar
-                        <% break; case 3 : %>
-                          Apr
-                          <% break; case 4 : %>
-                            May
-                            <% break; case 5 : %>
-                              Jun
-                              <% break; case 6 : %>
-                                Jul
-                                <% break; case 7 : %>
-                                  Aug
-                                  <% break; case 8 : %>
-                                    Sep
-                                    <% break; case 9 : %>
-                                      Oct
-                                      <% break; case 10 : %>
-                                        Nov
-                                        <% break; case 11 : %>
-                                          Dec
-                                          <% break; } %>
-                                            <%= prevOrders[prevOrder]['date'].getFullYear() %><br>
-                  <%= ('0'+prevOrders[prevOrder]['date'].getHours()).slice(-2); %>:<%=
-                      ('0'+prevOrders[prevOrder]['date'].getMinutes()).slice(-2); %>
-                </td>
-                <td>
-                  <%= ('0'+prevOrders[prevOrder]['pick_up_time'].getHours()).slice(-2); %>:<%=
-                      ('0'+prevOrders[prevOrder]['pick_up_time'].getMinutes()).slice(-2); %>
-                </td>
-                <td>
-                  <%= prevOrders[prevOrder]['order_status'] %>
-                </td>
-                <td>
-                  <% for(let prevOrderBasket of prevOrdersDetail[prevOrders[prevOrder]['order_id']]) { %>
-                    <%= prevOrderBasket['item'] %>(<%= prevOrderBasket['hot'] ? 'Hot' : 'Cold' %>/<%=
-                          prevOrderBasket['item_size'] %>/Spicyness:<%= prevOrderBasket['spiciness'] %>) $<%=
-                              Number(prevOrderBasket['price']).toFixed(2) %><br>
-                              <% } %>
-                </td>
-                <td>
-                  <%= prevOrders[prevOrder]['name'] %><br>
-                    <%= prevOrders[prevOrder]['phone'] %>
-                </td>
-                <td>
-                  Sub Total: $<%= Number(prevOrders[prevOrder]['sum']).toFixed(2) %><br>
-                    Tax@5: %$<%= (prevOrders[prevOrder]['sum'] * 0.05).toFixed(2) %><br>
-                      Total: $<%= (Number(prevOrders[prevOrder]['sum'] * 0.05) +
-                        Number(prevOrders[prevOrder]['sum'])).toFixed(2) %>
-                </td>
-              </tr>
-              <% } %>
-          </tbody>
-        </table>
-      </div>
+
     </div>
 
 </body>
