--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -2,19 +2,24 @@
   position: fixed;
   height: 40px;
   width: 100%;
-  background-color: rgb(223, 201, 92);
+  background-color: transparent;
   color: #FFFFFF;
+
   padding-left: 1.5em;
   padding-right: 1.5em;
   display: flex;
   align-items: center;
   justify-content: space-between;
   z-index: 100;
+
+  border: 3px solid #F2BA4D;
+  border-radius: 5px;
+
 }
 
 
 .title {
-  height: 4vh;
+  height: 3vh;
 
   display: flex;
 }
@@ -24,6 +29,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: black;
+
 }
 
 
