--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -2,7 +2,7 @@
   position: fixed;
   height: 40px;
   width: 100%;
-  background-color: transparent;
+  background-color: rgb(255, 255, 255);
   color: #FFFFFF;
 
   padding-left: 1.5em;
@@ -30,7 +30,6 @@
   flex-direction: column;
   align-items: center;
   color: black;
-
 }
 
 
