--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,13 @@
         <div class="info">
           <text id="dish_name">Pork Ramen</text>
           <text id="dish_description">Chashu, Black Fungus, Egg, Green Onion</text>
-          <text id="dish_price">$12</text>
+          <div class="menu_button">
+            <text id="dish_price">$12</text>
+            <div>
+              <img src="images/home_favor.png">
+              <img src="images/home_cart.png">
+            </div>
+          </div>
         </div>
         </div>
       <div class="items">
@@ -71,7 +77,13 @@
         <div class="info">
           <text id="dish_name">Veggie Ramen</text>
           <text id="dish_description">Eggplant peperoncini, croquette, bamboo shoot and green onion</text>
-          <text id="dish_price">$12</text>
+          <div class="menu_button">
+            <text id="dish_price">$12</text>
+            <div>
+              <img src="images/home_favor.png">
+              <img src="images/home_cart.png">
+            </div>
+          </div>
         </div>
         </div>
       <div class="items">
@@ -79,7 +91,13 @@
         <div class="info">
           <text id="dish_name">Mushroom Noodles</text>
           <text id="dish_description">Hand pulled noodles, mushrooms, onion and carrots</text>
-          <text id="dish_price">$12</text>
+          <div class="menu_button">
+            <text id="dish_price">$12</text>
+            <div>
+              <img src="images/home_favor.png">
+              <img src="images/home_cart.png">
+            </div>
+          </div>
         </div>
         </div>
       <div class="items">
@@ -87,7 +105,13 @@
         <div class="info">
           <text id="dish_name">Fried Rolls</text>
           <text id="dish_description">Fresh fried rolls, cheese and onions</text>
-          <text id="dish_price">$8</text>
+          <div class="menu_button">
+            <text id="dish_price">$8</text>
+            <div>
+              <img src="images/home_favor.png">
+              <img src="images/home_cart.png">
+            </div>
+          </div>
         </div>
         </div>
       <div class="items">
@@ -95,7 +119,13 @@
         <div class="info">
           <text id="dish_name">Coke</text>
           <text id="dish_description">You know what it is! coke, coke, coke!</text>
-          <text id="dish_price">$3</text>
+          <div class="menu_button">
+            <text id="dish_price">$3</text>
+            <div>
+              <img src="images/home_favor.png">
+              <img src="images/home_cart.png">
+            </div>
+          </div>
         </div>
         </div>
       <div class="items">
@@ -103,7 +133,13 @@
         <div class="info">
           <text id="dish_name">Strawberry Crepes</text>
           <text id="dish_description">Fresh Strawberries and whipping cream</text>
-          <text id="dish_price">$5</text>
+          <div class="menu_button">
+            <text id="dish_price">$5</text>
+            <div>
+              <img src="images/home_favor.png">
+              <img src="images/home_cart.png">
+            </div>
+          </div>
         </div>
         </div>
       </section>
@@ -111,5 +147,16 @@
 
 
 </body>
+<footer>
+  <div>
+    <p>CONTACT</p>
+    <p>ADDRESS</p>
+    <p>FAQ</p>
+    <p>ABOUT US</p>
+  </div>
+  <div>
+    <p>Noodles Express</p>
+  </div>
+</footer>
 
 </html>
