--- a/styles/main.scss
+++ b/styles/main.scss
@@ -37,7 +37,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 75px;
   margin-bottom: 30px;
 
   .statement {
@@ -56,5 +56,25 @@ body {
     border-radius: 10px;
     margin: 0px;
     margin-left: 20px;
+    cursor: pointer;
+  }
+}
+
+footer {
+  background-color: #d3d1d1;
+  width: 100%;
+  height: 166px;
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  div {
+    margin-top: 28px 30px 20px 20px;
+  }
+
+  p {
+    margin: 10px 30px 10px 30px;
+    font-size: 1.2rem;
   }
 }
