--- a/styles/my_page.scss
+++ b/styles/my_page.scss
@@ -16,7 +16,7 @@
 }
 
 .currentOrder {
-  background-color: rgb(255, 234, 8);
+  background-color: #F2BA4D;
   font-size: xx-small;
   height: fit-content;
   box-shadow: 5px 5px 5px rgba(187, 175, 89, 0.5);
@@ -24,7 +24,7 @@
 }
 
 .pastOrder {
-  background-color: rgb(255, 234, 8);
+  background-color: #F2BA4D;
 }
 
 .card-body {
