--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -69,7 +69,7 @@
                         Number(data[order][0]['total'])).toFixed(2) %>
                 </td>
                 <td class="col-1">
-                    <% if(data[order][0]['order_status'] === null){ %>
+                    <% if(data[order][0]['order_status'] === 'ordered'){ %>
                       <form class="form-inline" action="/dashboard/update" method="POST">
                         <div class="form-group mb-2">
                           <input class="form-control" type="text" name="mintuesTxtBox" placeholder="mintues">
